# Fake-news-detector

./: .gitignore  CLAUDE.md  README.md  install_and_verify.py  main.py  pyproject.toml  requirements.txt  setup.py
fake_news_detector.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/: app.py  dataset.py  evaluate.py  model.py  train.py
