[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fake-news-detector"
version = "0.1.0"
description = "Fake news detector using CLIP, Hugging Face transformers, Gradio, and scikit-learn"
readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = [
    "torch",
    "torchvision",
    "clip @ git+https://github.com/openai/CLIP.git",
    "transformers",
    "datasets",
    "scikit-learn",
    "numpy",
    "pandas",
    "Pillow",
    "gradio",
    "matplotlib",
    "seaborn",
    "jupyter",
    "tqdm",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.uv.sources]
clip = { git = "https://github.com/openai/CLIP.git" }
